[package]
name = "bootstrap-icon-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = {version="0.6.1"}
rand = {version="0.8.5"}
resvg = {version="0.28.0"}
usvg = {version="0.28.0"}
tiny-skia = {version="0.8.2"}
fontdb = {version="0.11.1"}
anyhow = {version="1.0.68"}
clap = {version="4.0.32", features=["default", "derive"]}
tokio = {version="1.23.0", features=["full"]}
lazy_static = {version="1.4.0"}
regex = {version="1.7.0"}